k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: hello-world-node
 namespace: default
 labels:
   app: hello-world-node
   version: "82c73c44c75bb60c3d811ba8c33e2f18f11c4396"
spec:
 strategy:
   type: RollingUpdate
   rollingUpdate:
     maxSurge: 1
     maxUnavailable: 0
 selector:
   matchLabels:
     app: hello-world-node
 template:
   metadata:
     labels:
       app: hello-world-node
       version: "82c73c44c75bb60c3d811ba8c33e2f18f11c4396"
   spec:
     affinity:
       podAntiAffinity:
         preferredDuringSchedulingIgnoredDuringExecution:
         - weight: 100
           podAffinityTerm:
             labelSelector:
               matchExpressions:
               - key: app
                 operator: In
                 values:
                 - hello-world-node
             topologyKey: topology.kubernetes.io/zone
         
         - weight: 80
           podAffinityTerm:
             labelSelector:
               matchExpressions:
               - key: app
                 operator: In
                 values:
                 - hello-world-node
             topologyKey: kubernetes.io/hostnamee
     containers:
     - name: hello-world-node
       image: 760370564012.dkr.ecr.us-east-1.amazonaws.com/omer/hello-world-node:82c73c44c75bb60c3d811ba8c33e2f18f11c4396
       ports:
       - containerPort: 3000
         name: http
       resources:
         requests:
          cpu: 100m
          memory: 128Mi
         limits:
          cpu: 500m
          memory: 512Mi
       livenessProbe:
         httpGet:
           path: /health
           port: 3000
         initialDelaySeconds: 15
         periodSeconds: 20
         timeoutSeconds: 5
         failureThreshold: 3
       readinessProbe:
         httpGet:
           path: /ready
           port: 3000
         initialDelaySeconds: 5
         periodSeconds: 10
         timeoutSeconds: 3
         failureThreshold: 3
     restartPolicy: Always
     terminationGracePeriodSeconds: 30
