k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-node-service
  namespace: default
  labels:
    app: hello-world-node
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: hello-world-node
  sessionAffinity: None
